--- a/src/styles/navbarStrip.css
+++ b/src/styles/navbarStrip.css
@@ -2,11 +2,22 @@
 .NavBarStrip {
   width: 50px;
   height: 800px;
-  /* margin: 0 0 0 0;
-  padding: 15px 0 27px; */
   box-shadow: 2px 0 8px 0 rgba(0, 0, 0, 0.2);
   background-color: #2b2f42;
   position: absolute;
   left: 0;
   z-index: 9;
+}
+
+
+@media screen and (max-width: 600px){
+  .NavBarStrip {
+    width: 100%;
+    height: 50px;
+    box-shadow: 0px 2px 10px 3px rgb(0 0 0 / 20%);
+    background-color: #2b2f42;
+    position: absolute;
+    left: 0;
+    z-index: 9;
+  }
 }
